Trying to fix IOS app spacing

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -416,3 +416,6 @@
 
   --ion-tab-bar-background: #1f1f1f;
 }
+html.plt-ios.plt-hybrid ion-header.ios {
+  margin-top: 20px;
+}
